# SSU-BigDataAnalysis-Project

./: .env.sample  01-data-analysis.ipynb  README.md  main.py  pyproject.toml
